fix the nav spacing issue , update the intro-text , remove the fixed-right

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   color: whitesmoke;
 }
 
+.NavDiv {
+  height: 80px;
+}
+
 nav {
   position: fixed;
   top: 0;
@@ -289,19 +293,15 @@ ul > li {
   height: 30px;
 }
 
-.fixed-right {
+#fixed-image {
   display: block;
   position: fixed;
-  top: 46%;
+  top: 50%;
   right: 0.5%;
-  bottom: 48.5%;
-  left: auto;
-  border: 3px solid #5796b4;
-  border-image: linear-gradient(to bottom, #5796b4, #dce5f0) 1 1 stretch;
-}
-#fixed-image {
-  width: 54px;
+  bottom: 50%;
+  width: 40px;
   margin-bottom: -1px;
+  border: 3px solid #5796b4;
   background: linear-gradient(to bottom, #5796b4, #dce5f0);
 }
 
@@ -369,5 +369,10 @@ ul > li {
   }
   .footer-conitainer {
     width: 100%;
+  }
+  .fixed-right {
+    top: 46%;
+    right: 0.5%;
+    bottom: 47.5%;
   }
 }
